--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -6,6 +6,7 @@
 }
 
 .hero__tagline {
+  padding-top: 5rem;
   text-align: center;
   min-width: 400px;
   max-width: 400px;
@@ -27,6 +28,11 @@
 .hero__btn {
   margin-top: 2rem;
 }
+
+.hero__logo {
+}
+
+/*  */
 
 .slider {
   position: absolute;
