--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -1,11 +1,17 @@
 .header {
-  margin: 1rem auto 0;
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 1rem;
+
   background-color: var(--clr-stone-light);
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding-top: 0.4rem;
   padding-bottom: 0.4rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
   border-radius: 5rem;
   box-shadow: rgba(149, 157, 165, 0.1) 0px 25px 25px;
 }
@@ -59,6 +65,13 @@
 .header__bars:hover {
   transform: translateX(0px);
   background: none;
+}
+
+/* xxs */
+@media (min-width: 375px) {
+  .header {
+    width: 90%;
+  }
 }
 
 /* xs */
