--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -29,72 +29,44 @@
   margin-top: 2rem;
 }
 
-.hero__logo {
-}
-
-/*  */
-
 .slider {
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 1000px;
-  /* height: 600px; */
-  /* margin-top: 4rem; */
+  padding-top: 5rem;
+  width: 100%;
+  height: var(--height);
+  overflow: hidden;
+  mask-image: linear-gradient(to right, transparent, #000 20% 80%, transparent);
 }
 
-#slide {
-  width: max-content;
-  margin-top: 1rem;
-}
-
-.item {
-  border-radius: 1rem;
-  width: 400px;
-  height: 350px;
-  background-position: 50% 50%;
-  display: inline-block;
-  transition: 0.3s;
-  background-size: 150%;
-  position: absolute;
-}
-.item:nth-child(1) {
-  transform: translate(-150%);
-  background-position: 0% 50%;
-  opacity: 0;
-}
-.item:nth-child(2) {
-  transform: translate(-40%);
-  background-position: 20% 50%;
-}
-.item:nth-child(3) {
-  transform: translate(70%);
-  background-position: 50% 50%;
-}
-.item:nth-child(4) {
-  transform: translate(180%);
-  background-position: 80% 50%;
-}
-.item:nth-child(n + 5) {
-  transform: translate(290%);
-  background-position: 100% 50%;
-  opacity: 0;
-}
-
-/* .item:hover {
-  background-size: 155%;
-} */
-.buttons {
+.slider .list {
   display: flex;
-  justify-content: center;
-  gap: 1rem;
+  width: 100%;
+  min-width: calc(var(--width) * var(--quantity));
+  position: relative;
 }
 
-.btn-next,
-.btn-prev {
-  color: var(--clr-red600);
-  width: var(--size-4xl);
-  height: var(--size-4xl);
-  display: block;
+.slider .list .item {
+  width: var(--width);
+  height: var(--height);
+  position: absolute;
+  left: 100%;
+  animation: autoRun 60s linear infinite;
+  animation-delay: calc((60s / var(--quantity)) * (var(--position) - 1));
+}
+
+.slider .list .item img {
+  width: 100%;
+  border-radius: 1rem;
+}
+
+@keyframes autoRun {
+  from {
+    left: 100%;
+  }
+  to {
+    left: calc(var(--width) * -1);
+  }
+}
+
+.slider:hover .item {
+  animation-play-state: paused !important;
 }
