--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -3,7 +3,7 @@
   left: 50%;
   transform: translateX(-50%);
   top: 1rem;
-  background-color: #ffe4e6;
+  background-color: #fff;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -29,7 +29,7 @@
 }
 
 .header__logo {
-  width: 70px;
+  width: 60px;
 }
 
 .header__text-container {
@@ -44,14 +44,13 @@
 .header__text-l {
   font-weight: 800;
   color: var(--clr-red600);
-  font-size: var(--size-3xl);
+  font-size: var(--size-2xl);
   line-height: 0.9;
   letter-spacing: -0.05em;
 }
 
 .header__text-s {
-  /* font-size: 0.685rem; */
-  font-size: 0.85rem;
+  font-size: 0.685rem;
   line-height: 0.9;
   color: var(--clr-stone800);
 }
