--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -88,8 +88,10 @@
 }
 
 .hero__logo {
-  padding-top: 5rem;
-  width: 200px;
+  padding-top: 3rem;
+  margin: 0 auto;
+  padding-bottom: 5rem;
+  width: 250px;
 }
 
 .slider__container {
