--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -33,6 +33,8 @@
 }
 
 .header__text-container {
+  font-family: "Orbitron", sans-serif;
+  font-weight: 900;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -42,15 +44,13 @@
 }
 
 .header__text-l {
-  font-weight: 800;
   color: var(--clr-red600);
   font-size: var(--size-2xl);
   line-height: 0.9;
-  letter-spacing: -0.05em;
 }
 
 .header__text-s {
-  font-size: 0.685rem;
+  font-size: 0.69rem;
   line-height: 0.9;
   color: var(--clr-stone800);
 }
