--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -8,24 +8,24 @@
 .hero__tagline {
   padding-top: 5rem;
   text-align: left;
-  width: 350px;
+  width: 300px;
 }
 
 .hero__tagline-l {
-  font-size: var(--size-4xl);
-  color: var(--clr-red-dark);
+  font-size: var(--size-5xl);
+  color: var(--clr-red800);
   line-height: 1;
-  padding-bottom: 1rem;
+  padding-bottom: 0.5rem;
 }
 
 .hero__tagline-s {
   /* padding-top: 1rem; */
-  font-size: var(--size-s);
+  font-size: var(--size-lg);
   color: var(--clr-stone600);
 }
 
 .hero__btn {
-  margin-top: 1rem;
+  margin-top: 2rem;
   margin-bottom: 5rem;
 }
 
@@ -96,5 +96,5 @@
 .slider__container {
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: var(--clr-stone-dark);
+  background-color: var(--clr-stone800);
 }
