--- a/styles/utils.css
+++ b/styles/utils.css
@@ -24,7 +24,7 @@
 
 .btn {
   display: inline-block;
-  background-color: var(--clr-btn);
+  background-color: var(--clr-red600);
   text-decoration: none;
   letter-spacing: 0.05em;
   color: var(--clr-red-light);
@@ -52,7 +52,7 @@
 }
 
 span {
-  color: var(--clr-btn);
+  color: var(--clr-red600);
   font-weight: 600;
 }
 
