--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -3,7 +3,7 @@
   left: 50%;
   transform: translateX(-50%);
   top: 1rem;
-  background-color: #fff;
+  background-color: var(--clr-stone-light);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -13,6 +13,7 @@
   padding-right: 2rem;
   border-radius: 5rem;
   box-shadow: rgba(149, 157, 165, 0.3) 0px 15px 25px;
+  z-index: 1;
 }
 
 .header__menu {
