--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -12,7 +12,7 @@
   padding-left: 2rem;
   padding-right: 2rem;
   border-radius: 5rem;
-  box-shadow: rgba(149, 157, 165, 0.3) 0px 15px 25px;
+  /* box-shadow: rgba(149, 157, 165, 0.3) 0px 15px 25px; */
   z-index: 1;
 }
 
