--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -1,39 +1,39 @@
 .hero {
-  padding-top: 4rem;
+  padding-top: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .hero__tagline {
-  padding-top: 5rem;
-  text-align: left;
-  width: 300px;
+  text-align: center;
+  width: 370px;
 }
 
 .hero__tagline-l {
-  font-size: var(--size-5xl);
-  color: var(--clr-stone800);
+  font-size: var(--size-3xl);
+  color: var(--clr-red-dark);
   padding-bottom: 0.5rem;
+  font-weight: 900;
 }
 
 .hero__tagline-s {
   padding-top: 1rem;
-  font-size: var(--size-xl);
-  color: var(--clr-stone800);
-  font-weight: 800;
+  font-size: var(--size-l);
+  color: var(--clr-stone600);
+  font-weight: 400;
 }
 
 .hero__btn {
-  margin-top: 2rem;
-  margin-bottom: 5rem;
+  margin-top: 1rem;
+  /* margin-bottom: 5rem; */
 }
 
 .slider {
   width: 100%;
   height: var(--height);
   overflow: hidden;
-  mask-image: linear-gradient(to right, transparent, #000 10% 90%, transparent);
+  mask-image: linear-gradient(to right, transparent, #000 20% 80%, transparent);
   z-index: -1;
 }
 
@@ -94,7 +94,7 @@
 }
 
 .slider__container {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+  padding-top: 6.5rem;
+  /* padding-bottom: 1rem; */
   background-color: var(--clr-stone-dark);
 }
