--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -94,7 +94,8 @@
 }
 
 .slider__container {
-  padding-top: 6.5rem;
-  /* padding-bottom: 1rem; */
+  margin-top: 5.6rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   background-color: var(--clr-stone-dark);
 }
