--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -14,7 +14,7 @@
   font-size: var(--size-3xl);
   color: var(--clr-red-dark);
   padding-bottom: 0.5rem;
-  font-weight: 400;
+  font-weight: 600;
 }
 
 .hero__tagline-s {
@@ -25,7 +25,7 @@
 }
 
 .hero__btn {
-  margin-top: 2rem;
+  margin-top: 1.5rem;
   /* margin-bottom: 5rem; */
 }
 
@@ -94,8 +94,8 @@
 }
 
 .slider__container {
-  margin-top: 5.6rem;
-  padding-top: 2rem;
+  /* margin-top: 5.6rem; */
+  padding-top: 6.5rem;
   padding-bottom: 2rem;
   background-color: var(--clr-stone-dark);
 }
