--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -18,10 +18,10 @@
 }
 
 .hero__tagline-s {
-  /* padding-top: 1rem; */
+  padding-top: 1rem;
   font-size: var(--size-l);
   color: var(--clr-stone600);
-  font-weight: 100;
+  font-weight: 600;
   text-transform: uppercase;
 }
 
