--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -14,14 +14,14 @@
   font-size: var(--size-3xl);
   color: var(--clr-stone800);
   padding-bottom: 0.5rem;
-  font-weight: 600;
+  font-weight: 400;
 }
 
 .hero__tagline-s {
-  padding-top: 1rem;
+  /* padding-top: 1rem; */
   font-size: var(--size-l);
   color: var(--clr-stone600);
-  font-weight: 600;
+  font-weight: 100;
   text-transform: uppercase;
 }
 
