--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,7 @@
   --clr-red800: #991b1b;
 
   --clr-btn: #f44e3f;
+  --clr-peach: #d33e43;
 
   --clr-sky-dark: #172554;
   --clr-sky800: #155e75;
