--- a/styles/utils.css
+++ b/styles/utils.css
@@ -24,28 +24,27 @@
 
 .btn {
   display: inline-block;
-  background-color: var(--clr-red800);
+  background-color: var(--clr-peach);
   text-decoration: none;
   letter-spacing: 0.05em;
   color: var(--clr-red-light);
   text-align: center;
   padding: 0.9em 2em;
-  border-radius: 5rem;
+  border-radius: 1rem;
   transition: transform 0.3s, background 0.3s, box-shadow 0.3s;
 }
 
 .btn:hover {
   transform: translateY(3px);
-  background-color: var(--clr-red600);
+  /* background-color: var(--clr-red800); */
   box-shadow: rgba(0, 0, 0, 0.25) 0px -30px 60px -12px inset;
 }
 
 .container {
-  /* width: 100%; */
   margin-left: auto;
   margin-right: auto;
-  padding-left: 2rem;
-  padding-right: 2rem;
+  /* padding-left: 2rem; */
+  /* padding-right: 2rem; */
 }
 
 .section {
@@ -53,7 +52,7 @@
 }
 
 span {
-  color: var(--clr-red800);
+  color: var(--clr-peach);
   font-weight: 900;
 }
 
