--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -11,7 +11,7 @@
   padding-bottom: 0.4rem;
   padding-left: 2rem;
   padding-right: 2rem;
-  border-radius: 1rem;
+  border-radius: 5rem;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 15px 50px;
   z-index: 1;
 }
@@ -58,9 +58,9 @@
 }
 
 .header__toggle {
-  color: var(--clr-stone800);
-  width: var(--size-3xl);
-  height: var(--size-3xl);
+  color: var(--clr-red800);
+  width: var(--size-2xl);
+  height: var(--size-2xl);
   display: block;
 }
 
