--- a/styles/utils.css
+++ b/styles/utils.css
@@ -23,14 +23,16 @@
 } */
 
 .btn {
-  display: inline-block;
-  background-color: var(--clr-red800);
+  display: block;
+  background-color: var(--clr-peach);
   text-decoration: none;
   letter-spacing: 0.05em;
   color: var(--clr-red-light);
+  font-size: var(--size-xs);
+  font-weight: 800;
   text-align: center;
-  padding: 0.9em 2em;
-  border-radius: 1rem;
+  padding: 1em 2em;
+  border-radius: 0.9rem;
   transition: transform 0.3s, background 0.3s, box-shadow 0.3s;
 }
 
@@ -43,8 +45,8 @@
 .container {
   margin-left: auto;
   margin-right: auto;
-  /* padding-left: 2rem; */
-  /* padding-right: 2rem; */
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 
 .section {
