--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -6,8 +6,8 @@
 }
 
 .hero__text {
-  text-align: center;
-  width: 370px;
+  text-align: left;
+  width: 100%;
 }
 
 .hero__text1 {
@@ -23,15 +23,16 @@
   font-size: var(--size-l);
   color: var(--clr-stone600);
   font-weight: 400;
-  /* text-transform: uppercase; */
 }
 
 .hero__btn1 {
   margin-top: 1rem;
+  width: 100%;
 }
 
 a.hero__btn2 {
   margin-top: 1rem;
   background-color: #d6d3d1;
   color: var(--clr-stone600);
+  width: 100%;
 }
