--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -12,16 +12,16 @@
 
 .hero__text1 {
   font-size: var(--size-3xl);
-  color: var(--clr-stone8900);
-  padding-bottom: 0.5rem;
-  font-weight: 400;
+  color: var(--clr-stone800);
+  /* padding-bottom: 0.25rem; */
+  font-weight: 800;
 }
 
 .hero__text2 {
   padding-top: 1rem;
   padding-bottom: 1rem;
   font-size: var(--size-l);
-  color: var(--clr-stone600);
+  color: var(--clr-stone800);
   font-weight: 400;
 }
 
