--- a/styles/components/slider.css
+++ b/styles/components/slider.css
@@ -56,9 +56,9 @@
 }
 
 .slider__container {
-  margin-top: 5.6rem;
+  /* margin-top: 5.6rem; */
   /* padding-top: 6.5rem; */
-  padding-top: 2rem;
+  padding-top: 5rem;
   padding-bottom: 2rem;
   /* background-color: var(--clr-stone-dark); */
   /* box-shadow: rgba(149, 157, 165, 1) 0px 15px 25px; */
