--- a/styles/utils.css
+++ b/styles/utils.css
@@ -38,7 +38,8 @@
 
 .btn:hover {
   transform: translateY(3px);
-  /* background-color: var(--clr-red800); */
+  /* background-color: var(--clr-peach);
+  text-decoration: n; */
   box-shadow: rgba(0, 0, 0, 0.25) 0px -30px 60px -12px inset;
 }
 
@@ -54,8 +55,14 @@
 }
 
 span {
-  color: var(--clr-red800);
+  color: var(--clr-peach);
   font-weight: 900;
+}
+
+.icon {
+  width: var(--size-3xl);
+  height: var(--size-3xl);
+  color: var(--clr-peach);
 }
 
 /* xxs */
