--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -1,5 +1,5 @@
 .about {
-  padding-top: 5rem;
+  padding-top: 3rem;
   padding-bottom: 5rem;
   display: flex;
   flex-direction: column;
@@ -15,9 +15,15 @@
 }
 
 .about__card {
+  border-radius: 1rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  background-color: var(--clr-stone-light);
   display: flex;
   justify-content: center;
   gap: 1rem;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 25px -5px,
+    rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
 }
 
 .card__text {
