--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -22,8 +22,7 @@
   display: flex;
   justify-content: center;
   gap: 1rem;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 25px -5px,
-    rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 25px 20px -20px;
 }
 
 .card__text {
