--- a/styles/components/slider.css
+++ b/styles/components/slider.css
@@ -4,6 +4,7 @@
   overflow: hidden;
   mask-image: linear-gradient(to right, transparent, #000 10% 90%, transparent);
   z-index: -1;
+  margin-top: 1rem;
 }
 
 .slider .slider__list {
