--- a/styles/utils.css
+++ b/styles/utils.css
@@ -40,7 +40,7 @@
   transform: translateY(3px);
   /* background-color: var(--clr-peach);
   text-decoration: n; */
-  box-shadow: rgba(0, 0, 0, 0.25) 0px -30px 60px -12px inset;
+  /* box-shadow: rgba(0, 0, 0, 0.25) 0px -30px 60px -12px inset; */
 }
 
 .container {
