--- a/styles/components/slider.css
+++ b/styles/components/slider.css
@@ -4,7 +4,7 @@
   overflow: hidden;
   mask-image: linear-gradient(to right, transparent, #000 10% 90%, transparent);
   z-index: -1;
-  margin-top: 1rem;
+  /* margin-top: 1rem; */
 }
 
 .slider .slider__list {
@@ -62,7 +62,7 @@
 .slider__container {
   /* margin-top: 5.6rem; */
   /* padding-top: 6.5rem; */
-  padding-top: 5rem;
+  padding-top: 6rem;
   /* padding-bottom: 2rem; */
   /* background-color: var(--clr-stone-dark); */
 }
