--- a/styles/style.css
+++ b/styles/style.css
@@ -5,6 +5,7 @@
   --clr-stone200: #e7e5e4;
   --clr-stone400: #a8a29e;
   --clr-stone600: #57534e;
+  --clr-stone700: #44403c;
   --clr-stone800: #292524;
 
   --clr-red-dark: #160303;
