--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -6,13 +6,13 @@
 }
 
 .hero__text {
-  text-align: left;
+  text-align: center;
   width: 100%;
 }
 
 .hero__text1 {
   font-size: var(--size-3xl);
-  color: var(--clr-red800);
+  color: var(--clr-stone700);
   /* padding-bottom: 0.25rem; */
   font-weight: 900;
 }
@@ -21,7 +21,7 @@
   padding-top: 1rem;
   padding-bottom: 1rem;
   font-size: var(--size-s);
-  color: var(--clr-stone800);
+  color: var(--clr-stone600);
   font-weight: 100;
 }
 
