--- a/styles/style.css
+++ b/styles/style.css
@@ -7,15 +7,16 @@
   --clr-stone600: #57534e;
   --clr-stone700: #44403c;
   --clr-stone800: #292524;
-
   --clr-red-dark: #160303;
   --clr-red-light: #fef2f2;
   --clr-red400: #f87171;
   --clr-red600: #dc2626;
   --clr-red800: #991b1b;
-
   --clr-btn: #f44e3f;
-  --clr-peach: #d33e43;
+  /* --clr-peach: #d33e43; */
+
+  /* --clr-peach: #574240; */
+  --clr-peach: #574240;
 
   --clr-sky-dark: #172554;
   --clr-sky800: #155e75;
