--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,9 @@
   /* --clr-peach: #d33e43; */
 
   /* --clr-peach: #574240; */
-  --clr-peach: #574240;
+  /* --clr-peach: #7c5056; */
+  /* --clr-peach: #800008; */
+  --clr-peach: #8f0014;
 
   --clr-sky-dark: #172554;
   --clr-sky800: #155e75;
