--- a/styles/style.css
+++ b/styles/style.css
@@ -17,8 +17,8 @@
 
   /* --clr-peach: #574240; */
   /* --clr-peach: #7c5056; */
-  --clr-peach: #8f0014;
-  /* --clr-peach: #ba2431; */
+  /* --clr-peach: #8f0014; */
+  --clr-peach: #ba2431;
 
   --clr-sky-dark: #172554;
   --clr-sky800: #155e75;
