--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -31,12 +31,12 @@
 
 .card__text1 {
   font-size: var(--size-xl);
-  color: var(--clr-stone800);
+  color: var(--clr-stone700);
 }
 
 .card__text2 {
   padding-top: 0.5rem;
-  font-size: var(--size-base);
+  font-size: var(--size-);
   color: var(--clr-stone600);
 }
 
