--- a/styles/utils.css
+++ b/styles/utils.css
@@ -34,7 +34,7 @@
   padding: 1em 2em;
   border-radius: 0.5rem;
   transition: transform 0.3s, background 0.3s, box-shadow 0.3s;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
 }
 
 .btn:hover {
