--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -46,7 +46,7 @@
 }
 
 .header__text1 {
-  color: var(--clr-red800);
+  color: var(--clr-peach);
   font-size: var(--size-2xl);
   line-height: 1;
 }
