--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -11,14 +11,21 @@
 
 .about__img {
   border-radius: 1rem;
-  /* max-width: 400px; */
+  width: 100%;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 25px 20px -20px;
+}
+
+.about__holder {
+  background-color: var(--clr-stone-light);
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .about__card {
-  border-radius: 1rem;
   padding-top: 2rem;
   padding-bottom: 2rem;
-  background-color: var(--clr-stone-light);
   display: flex;
   justify-content: center;
   gap: 1rem;
@@ -41,5 +48,15 @@
 }
 
 .about__logo {
-  padding-bottom: 4rem;
+  /* padding-bottom: 4rem; */
+  width: 200px;
+}
+
+.about__title {
+  align-self: flex-start;
+  color: var(--clr-stone700);
+  font-size: var(--size-4xl);
+  padding-bottom: 3rem;
+  padding-top: 6rem;
+  font-weight: 900;
 }
