--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -1,5 +1,6 @@
 .hero {
   padding-top: 1rem;
+  padding-bottom: 10rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -31,7 +32,47 @@
 
 a.hero__btn2 {
   margin-top: 1rem;
+
+  margin-top: 1rem;
   background-color: #d6d3d1;
   color: var(--clr-stone600);
   width: 100%;
+}
+
+.hero__logo {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+}
+
+.hero__logo::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.85); /* Затемняет видео на 75% */
+  transform: translate(-50%, -50%);
+  z-index: -1; /* Устанавливаем z-index чтобы он был выше видео, но ниже логотипа */
+}
+
+.hero__logo video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transform: translate(-50%, -50%);
+  z-index: -2; /* Отправляет видео на задний план */
+}
+
+.hero__logo img {
+  position: relative;
+  width: 250px;
+  z-index: -1; /* Поднимает логотип выше видео и затемняющего слоя */
 }
