--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -40,39 +40,14 @@ a.hero__btn2 {
 }
 
 .hero__logo {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-}
-
-.hero__logo::before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.85); /* Затемняет видео на 75% */
-  transform: translate(-50%, -50%);
-  z-index: -1; /* Устанавливаем z-index чтобы он был выше видео, но ниже логотипа */
-}
-
-.hero__logo video {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  transform: translate(-50%, -50%);
-  z-index: -2; /* Отправляет видео на задний план */
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  mask-image: linear-gradient(to right, transparent, #000 50% 50%, transparent);
+  background-color: var(--clr-stone400);
+  z-index: -1;
 }
 
 .hero__logo img {
-  position: relative;
-  width: 250px;
-  z-index: -1; /* Поднимает логотип выше видео и затемняющего слоя */
+  margin: 0 auto;
+  width: 200px;
 }
