--- a/styles/utils.css
+++ b/styles/utils.css
@@ -61,9 +61,9 @@ span {
 }
 
 .icon {
-  width: var(--size-4xl);
-  height: var(--size-4xl);
-  color: #d33e43;
+  width: var(--size-3xl);
+  height: var(--size-3xl);
+  color: var(--clr-peach);
 }
 
 /* xxs */
