--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -7,22 +7,22 @@
 }
 
 .hero__text {
-  text-align: center;
+  text-align: left;
   width: 100%;
 }
 
 .hero__text1 {
   font-size: var(--size-3xl);
-  color: var(--clr-stone700);
+  color: var(--clr-stone800);
   font-weight: 900;
 }
 
 .hero__text2 {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  font-size: var(--size-s);
+  font-size: var(--size-lg);
   color: var(--clr-stone600);
-  font-weight: 100;
+  font-weight: 600;
 }
 
 .hero__btn1 {
@@ -43,7 +43,7 @@ a.hero__btn2 {
   padding-top: 2rem;
   padding-bottom: 2rem;
   /* mask-image: linear-gradient(to right, transparent, #000 50% 50%, transparent); */
-  background-color: var(--clr-stone800);
+  /* background-color: var(--clr-stone800); */
 }
 
 .hero__logo img {
