--- a/styles/utils.css
+++ b/styles/utils.css
@@ -53,6 +53,8 @@
 
 .section {
   margin-top: 5rem;
+  background-color: var(--clr-stone-light);
+  border-radius: 1rem;
 }
 
 span {
@@ -61,8 +63,8 @@ span {
 }
 
 .icon {
-  width: var(--size-3xl);
-  height: var(--size-3xl);
+  width: var(--size-4xl);
+  height: var(--size-4xl);
   color: var(--clr-peach);
 }
 
