--- a/styles/style.css
+++ b/styles/style.css
@@ -13,11 +13,11 @@
   --clr-red600: #dc2626;
   --clr-red800: #991b1b;
   --clr-btn: #f44e3f;
-  /* --clr-peach: #d33e43; */
+  --clr-peach: #d33e43;
 
   /* --clr-peach: #574240; */
   /* --clr-peach: #7c5056; */
-  --clr-peach: #8f0014;
+  /* --clr-peach: #8f0014; */
   /* --clr-peach: #ba2431; */
 
   --clr-sky-dark: #172554;
