--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -14,7 +14,7 @@
 .about__img {
   border-radius: 1rem;
   width: 100%;
-  box-shadow: rgba(0, 0, 0, 0.5) 0px 25px 20px -20px;
+  /* box-shadow: rgba(0, 0, 0, 0.5) 0px 25px 20px -20px; */
 }
 
 .about__holder {
@@ -31,7 +31,7 @@
   display: flex;
   justify-content: center;
   gap: 1rem;
-  /* box-shadow: rgba(0, 0, 0, 0.1) 0px 25px 20px -20px; */
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 25px 20px -20px;
 }
 
 .card__text {
@@ -39,24 +39,30 @@
 }
 
 .card__text1 {
-  font-size: var(--size-2xl);
-  color: var(--clr-peach);
+  font-size: var(--size-xl);
+  color: var(--clr-stone800);
   font-weight: 900;
 }
 
 .card__text2 {
   padding-top: 0.5rem;
-  font-size: var(--size-lg);
+  font-size: var(--size-base);
   color: var(--clr-stone600);
-  font-weight: 600;
+  font-weight: 400;
 }
 
 .about__title {
-  width: 100%;
   align-self: flex-start;
-  color: var(--clr-stone800);
+}
+
+.about__text1 {
+  color: var(--clr-peach);
   font-size: var(--size-5xl);
   font-weight: 600;
-  padding-bottom: 2rem;
-  /* border-bottom: 3px solid var(--clr-stone600); */
+}
+
+.about__text2 {
+  color: var(--clr-stone600);
+  font-size: var(--size-lg);
+  font-weight: 600;
 }
