--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -57,12 +57,12 @@
 
 .about__text1 {
   color: var(--clr-peach);
-  font-size: var(--size-5xl);
+  font-size: var(--size-4xl);
   font-weight: 600;
 }
 
 .about__text2 {
   color: var(--clr-stone600);
-  font-size: var(--size-lg);
-  font-weight: 600;
+  font-size: var(--size-base);
+  font-weight: 400;
 }
