--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -1,6 +1,6 @@
 .hero {
   padding-top: 1rem;
-  padding-bottom: 10rem;
+  padding-bottom: 7rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,8 +13,9 @@
 
 .hero__text1 {
   font-size: var(--size-5xl);
-  color: var(--clr-peach);
+  color: var(--clr-red800);
   font-weight: 900;
+  line-height: 1;
 }
 
 .hero__text2 {
@@ -22,7 +23,7 @@
   padding-bottom: 1rem;
   font-size: var(--size-base);
   color: var(--clr-stone600);
-  font-weight: 600;
+  font-weight: 400;
 }
 
 .hero__btn1 {
@@ -40,10 +41,10 @@ a.hero__btn2 {
 }
 
 .hero__logo {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   /* mask-image: linear-gradient(to right, transparent, #000 50% 50%, transparent); */
-  /* background-color: var(--clr-stone800); */
+  background-color: var(--clr-stone-dark);
 }
 
 .hero__logo img {
