--- a/styles/components/slider.css
+++ b/styles/components/slider.css
@@ -64,5 +64,5 @@
   padding-top: 1.5rem;
   /* padding-top: 5rem; */
   /* padding-bottom: 2rem; */
-  background-color: var(--clr-stone-dark);
+  /* background-color: var(--clr-stone-dark); */
 }
