--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -7,12 +7,12 @@
 }
 
 .hero__text {
-  text-align: left;
+  text-align: center;
   width: 100%;
 }
 
 .hero__text1 {
-  font-size: var(--size-4xl);
+  font-size: var(--size-3xl);
   color: var(--clr-red800);
   font-weight: 900;
   line-height: 1;
@@ -42,10 +42,10 @@ a.hero__btn2 {
 
 .hero__logo {
   margin-top: 6rem;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
   /* mask-image: linear-gradient(to right, transparent, #000 50% 50%, transparent); */
-  background-color: var(--clr-stone800);
+  background-color: var(--clr-stone-dark);
 }
 
 .hero__logo img {
