--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -40,7 +40,7 @@
 
 .card__text1 {
   font-size: var(--size-xl);
-  color: var(--clr-stone800);
+  color: var(--clr-red800);
   font-weight: 900;
 }
 
