--- a/styles/style.css
+++ b/styles/style.css
@@ -53,7 +53,7 @@ html {
 }
 
 body {
-  font-family: "Maven Pro", sans-serif;
+  /* font-family: "Maven Pro", sans-serif; */
   background-color: white;
   color: var(--clr-stone-dark);
 }
