--- a/styles/components/swiper.css
+++ b/styles/components/swiper.css
@@ -215,11 +215,11 @@
 
 .row {
   padding-top: 3rem;
-  padding-bottom: 3rem;
+  padding-bottom: 5rem;
 
-  /* background-color: var(--clr-stone-dark); */
-  gap: 0.5rem;
-  /* border-radius: 0.5rem; */
+  background-color: var(--clr-stone-dark);
+  gap: 1rem;
+  border-radius: 1rem;
 }
 
 .w-100 {
@@ -227,7 +227,7 @@
 }
 
 .gallery__text1 {
-  color: var(--clr-red800);
+  color: var(--clr-stone400);
   font-size: var(--size-4xl);
   font-weight: 800;
   text-align: center;
