--- a/styles/components/swiper.css
+++ b/styles/components/swiper.css
@@ -209,8 +209,6 @@
 }
 
 .modal {
-  top: 30%;
-  --bs-modal-padding: 0;
 }
 
 .row {
@@ -255,4 +253,14 @@
 
 .modal-backdrop.show {
   opacity: 0.85;
+}
+
+.modal-dialog {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  pointer-events: none;
+  justify-content: center;
+  align-content: center;
 }
