--- a/styles/components/slider.css
+++ b/styles/components/slider.css
@@ -23,14 +23,15 @@
   animation-delay: calc(
     (200s / var(--quantity)) * (var(--position) - var(--quantity))
   ) !important;
+  /* filter: grayscale(1); */
 }
 
 .slider .slider__list .slider__item img {
   width: 100%;
   border-radius: 1rem;
-  box-shadow: rgba(0, 0, 0, 0.05) 0px 2px 1px, rgba(0, 0, 0, 0.05) 0px 4px 2px,
+  /* box-shadow: rgba(0, 0, 0, 0.05) 0px 2px 1px, rgba(0, 0, 0, 0.05) 0px 4px 2px,
     rgba(0, 0, 0, 0.05) 0px 8px 4px, rgba(0, 0, 0, 0.05) 0px 8px 8px,
-    rgba(0, 0, 0, 0.05) 0px 8px 16px;
+    rgba(0, 0, 0, 0.05) 0px 8px 16px; */
 }
 
 @keyframes autoRun {
