--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -1,6 +1,6 @@
 .about {
   /* padding-top: 10rem; */
-  padding-bottom: 6rem;
+  padding-bottom: 20rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -26,8 +26,7 @@
 }
 
 .about__card {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding: 3rem 1rem;
   display: flex;
   justify-content: center;
   gap: 1rem;
@@ -36,20 +35,23 @@
 
 .card__text {
   max-width: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .card__text1 {
-  font-size: var(--size-2xl);
+  font-size: var(--size-xl);
   color: var(--clr-peach);
   font-weight: 800;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
 }
 
 .card__text2 {
   padding-top: 0.5rem;
-  font-size: var(--size-lg);
+  font-size: var(--size-base);
   color: var(--clr-stone-dark);
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .about__title {
@@ -58,10 +60,10 @@
 
 .about__text1 {
   color: var(--clr-stone400);
-  font-size: var(--size-5xl);
+  font-size: var(--size-7xl);
   font-weight: 1000;
-  text-transform: uppercase;
-  line-height: 0.75;
+  /* text-transform: uppercase; */
+  /* line-height: 0.75; */
 }
 
 .about__text2 {
