--- a/styles/utils.css
+++ b/styles/utils.css
@@ -58,14 +58,14 @@
 }
 
 span {
-  color: var(--clr-peach);
+  color: var(--clr-red600);
   font-weight: 900;
 }
 
 .icon {
   width: var(--size-4xl);
   height: var(--size-4xl);
-  color: var(--clr-peach);
+  color: var(--clr-red600);
 }
 
 /* xxs */
