--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -59,7 +59,7 @@
 }
 
 .about__text1 {
-  color: #7c5056;
+  color: var(--clr-stone400);
   font-size: var(--size-7xl);
   font-weight: 1000;
   /* text-transform: uppercase; */
