--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -6,7 +6,7 @@
   justify-content: center;
   align-items: center;
   text-align: left;
-  gap: 2rem;
+  gap: 5rem;
   /* background-color: var(--clr-stone-light); */
   /* border-radius: 1rem; */
 }
@@ -26,29 +26,36 @@
 }
 
 .about__card {
-  padding: 3rem 1rem;
-  display: flex;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 2rem;
+  padding-bottom: 5rem;
+  /* display: flex; */
+  flex-direction: column;
   justify-content: center;
   gap: 1rem;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 25px 20px -20px;
 }
 
 .card__text {
-  max-width: 70%;
+  /* max-width: 80%; */
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
 .card__text1 {
+  max-width: 80%;
+  padding-top: 0.5rem;
   font-size: var(--size-2xl);
   color: var(--clr-red600);
   font-weight: 800;
-  /* text-transform: uppercase; */
+  font-style: italic;
+  text-transform: uppercase;
 }
 
 .card__text2 {
-  padding-top: 0.5rem;
+  padding-top: 1rem;
   font-size: var(--size-lg);
   color: var(--clr-stone-dark);
   font-weight: 400;
