--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -29,7 +29,7 @@
   padding-left: 2rem;
   padding-right: 2rem;
   padding-top: 2rem;
-  padding-bottom: 5rem;
+  padding-bottom: 3rem;
   /* display: flex; */
   flex-direction: column;
   justify-content: center;
@@ -56,7 +56,7 @@
 
 .card__text2 {
   padding-top: 2rem;
-  font-size: var(--size-lg);
+  font-size: var(--size-xl);
   color: var(--clr-stone-dark);
   font-weight: 400;
 }
